Revert "close driver and don't return in meta"
This reverts commit c6108bbd6a21ec6c1555168584423aeb4bdffff8.

--- a/setup.cfg
+++ b/setup.cfg
@@ -1,8 +1,8 @@
 [metadata]
 name = scrapy-selenium
-version = 1.2.2
+version = 0.0.7
 url = https://github.com/clemfromspace/scrapy-selenium
-licence = ...
+licence = DO WHAT THE FUCK YOU WANT TO PUBLIC LICENSE
 description = Scrapy with selenium
 long_description = file:README.md
 
