--- a/setup.cfg
+++ b/setup.cfg
@@ -1,8 +1,8 @@
 [metadata]
 name = scrapy-selenium
-version = 0.0.7
+version = 1.2.2
 url = https://github.com/clemfromspace/scrapy-selenium
-licence = DO WHAT THE FUCK YOU WANT TO PUBLIC LICENSE
+licence = ...
 description = Scrapy with selenium
 long_description = file:README.md
 
