--- a/setup.cfg
+++ b/setup.cfg
@@ -1,8 +1,8 @@
 [metadata]
 name = scrapy-selenium
-version = 0.0.7
-url = https://github.com/clemfromspace/scrapy-selenium
-licence = DO WHAT THE FUCK YOU WANT TO PUBLIC LICENSE
+version = 2.0
+url = https://github.com/straatdotco/scrapy-selenium
+licence = ...
 description = Scrapy with selenium
 long_description = file:README.md
 
